@@ -1,7 +1,9 @@
 2014-01-02   2.2.7:
 -------------------
   * fixed bug in conda build related to lchmod not being available on all
-    platforms
+     platforms (see issue #467, peter1000)
+  * minor fixes, improvements: check chrpath for build in the beginning
+     (issue #317 ) as well as for patch
 
 
 2013-12-31   2.2.6:
